--- a/manifest.json
+++ b/manifest.json
@@ -15,7 +15,7 @@
     
     "content_scripts": [
         {
-            "matches": ["*://old.reddit.com/*"],
+            "matches": ["*://old.reddit.com/*", "*://www.reddit.com/*"],
             "js": ["main.js"]
         }
     ],
@@ -24,7 +24,7 @@
 
     "browser_specific_settings": {
         "gecko": {
-            "id": "{007e5327-f1ba-433d-aead-41cab2b7afb1}",
+            "id": "contact@leonardobishop.com",
             "strict_min_version": "57.0a1"
         }
     }
